# ct-publicness

./: .gitignore  .~lock.benchmarks.midterm.csv#  CFG_SCHEMA.md  README.md  TRACE_SCHEMA.md  benchmarks.csv  benchmarks.extended.csv  benchmarks.final.csv  benchmarks.full.csv  benchmarks.loopinv.csv  benchmarks.md  benchmarks.midterm.csv  benchmarks.newsuite.csv  benchmarks.txt  path_public.ndjson  public_at_point.ndjson
examples/: algos.c  bitwise.c  classic_benchmarks.c  const_pruned.ll  crypto_kernels.c  diversity.c  linear.c  loop.c  loop_invariant.c  toy.c  transmitters.ll
llvm-pass/: CMakeLists.txt  PublicDataPass.cpp
scripts/: gen_traces.sh  metrics_pipeline.sh  run_benchmarks.sh
symex/: README.md  aggregate.py  analyze.py  benchmarks.py  constraints.py  join_trace_index.py  loop_invariants.py  main.py  metrics.py  models.py  parser.py  pipeline.py  publicness.py  requirements.txt  solver.py  symexec.py  trace_index_lookup.py
symex/examples/: path_public.ndjson
